[package]
name = "invader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossterm = "0.27.0"
anyhow = "1.0.80"
thiserror = "1.0.57"
rodio = "0.17.3"
rand = "0.8.5"
imageproc = "0.24.0"
image = "0.25.0"
ab_glyph = "0.2.23"
